                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-08-2006 added: resume playback for dvd's and automatic bookmark for last played position
 - 25-08-2006 fixed: Folders on memory units weren't retrieved correctly.
 - 25-08-2006 fixed: Prepended characters in track label were applied even if the track had no tag information (usually only on playlists treated as files).
 - 25-08-2006 fixed: Fullscreen information bar wasn't rendered while paused.
 - 25-08-2006 fixed: Fullscreen GUI was rendered twice while paused.
 - 25-08-2006 fixed: Some fullscreen OSD dialogs weren't unloaded (wasted memory after playing a video)
 - 25-08-2006 fixed: Fullscreen video didn't load the OSD files from the appropriate resolution.
 - 25-08-2006 changed: TTF rendering improved through the use of freetype.
 - 25-08-2006 changed: Cleaned up the memory card notification code.
 - 25-08-2006 added: some better labels for the shutdown timer.
 - 24-08-2006 fixed: NextSubtitle didn't work with the dvdplayer.
 - 24-08-2006 changed: better samba user and password entry dialogs.
 - 24-08-2006 fixed: mockup in the kai client with the new evil b button.
 - 24-08-2006 added: you can now lock the screensaver.
 - 24-08-2006 fixed: mockup in my programs with the new evil b button.
 - 24-08-2006 fixed: loginscreen first activated the home window, then your prefered startup window.
 - 24-08-2006 fixed: HDD S.M.A.R.T Requesting of non (ID:17) will cause a loop request! http://www.xboxmediacenter.com/wiki/index.php?title=InfoLabels&action=submit
 - 23-08-2006 fixed: adding bookmarks wouldn't generate proper video thumbnails